Fixes vector-im/element-web/issues/20911 fixed padding on dialog button to make border of invite link visible

--- a/res/css/views/elements/_CopyableText.scss
+++ b/res/css/views/elements/_CopyableText.scss
@@ -22,7 +22,7 @@ limitations under the License.
     border: solid 1px $light-fg-color;
     margin-bottom: 10px;
     margin-top: 10px;
-    padding: 10px;
+    padding: 9px;
     width: max-content;
     max-width: 100%;
 
